--- a/.github/workflows/compile_and_test.yml
+++ b/.github/workflows/compile_and_test.yml
@@ -10,33 +10,21 @@ defaults:
     shell: bash
 jobs:
   build_and_test:
-    name: Build & test CMAKE on ${{ matrix.os }} with ${{ matrix.compiler }}.
-    runs-on: ${{ matrix.os }}
+    name: Build & test CMAKE on ${{ matrix.os }}.
+    runs-on: [${{ matrix.os }},${{ matrix.arch }}]
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest,macos-latest]
+        arch: [x86,arm64]
         compiler: [ g++-10 ]
-        include:
-          - os: ubuntu-latest
-            compiler: g++-10
-            target: Linux
-          - os: macos-latest
-            compiler: g++-10
-            target: Macos
-          - os: windows-latest
-            compiler: cl
-            target: Windows
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: Checkout submodules
-        uses: srt32/git-actions@v0.0.3
+      - name: Build c++ project
+        uses: nicledomaS/cmake_build_action@v1.4
         with:
-          args: git submodule update --init --recursive
-      - name: Run the projects cmake setup.
-        run: cmake .
-      - name: Add msbuild to PATH
-        if: ${{ matrix.os == 'windows-latest' }}
-        uses: microsoft/setup-msbuild@v1.0.2
-      - name: Compile a release build of contract-plugin
-        run: make
+          submodule_update: ON
+      - uses: actions/upload-artifact@v2
+        with:
+          path: build/opt/bin/contract_csharp_plugin
+          name: contract_csharp_plugin_${{ matrix.os }}_${{ matrix.arch }}
