--- a/.github/workflows/compile_and_test.yml
+++ b/.github/workflows/compile_and_test.yml
@@ -1,30 +1,30 @@
-name: compile_and_test
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master, 14783538_improve_cs_generator]
-  workflow_dispatch:
-defaults:
-  run:
-    shell: bash
-jobs:
-  build_and_test:
-    name: Build & test CMAKE on ${{ matrix.os }}.
-    runs-on: [${{ matrix.os }},${{ matrix.arch }}]
-    strategy:
-      matrix:
-        os: [ubuntu-latest,macos-latest]
-        arch: [x86,arm64]
-        compiler: [ g++-10 ]
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Build c++ project
-        uses: nicledomaS/cmake_build_action@v1.4
-        with:
-          submodule_update: ON
-      - uses: actions/upload-artifact@v2
-        with:
-          path: build/opt/bin/contract_csharp_plugin
-          name: contract_csharp_plugin_${{ matrix.os }}_${{ matrix.arch }}
+# name: compile_and_test
+# on:
+#   push:
+#     branches: [ master ]
+#   pull_request:
+#     branches: [ master, 14783538_improve_cs_generator]
+#   workflow_dispatch:
+# defaults:
+#   run:
+#     shell: bash
+# jobs:
+#   build_and_test:
+#     name: Build & test CMAKE on ${{ matrix.os }}.
+#     runs-on: [${{ matrix.os }},${{ matrix.arch }}]
+#     strategy:
+#       matrix:
+#         os: [ubuntu-latest,macos-latest]
+#         arch: [x86,arm64]
+#         compiler: [ g++-10 ]
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v2
+#       - name: Build c++ project
+#         uses: nicledomaS/cmake_build_action@v1.4
+#         with:
+#           submodule_update: ON
+#       - uses: actions/upload-artifact@v2
+#         with:
+#           path: build/opt/bin/contract_csharp_plugin
+#           name: contract_csharp_plugin_${{ matrix.os }}_${{ matrix.arch }}
