--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: [linux/amd64, linux/arm64, or darwin/amd64]
+          platforms: linux/amd64, linux/arm64, darwin/amd64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
